syntax = "proto3";

enum SignatureScheme {
    ED25519 = 0;
}

message Certificate {
    SignatureScheme scheme = 1;
    bytes public_key = 2;
    bytes self_signature_of_inner = 3;
    bytes data = 4;
}

message CertificateChain {
    Certificate account_certificate = 3;
    bytes account_to_device_signature = 4;
    Certificate device_certificate = 5;
}

message AuthenticationChallengePayload {
    CertificateChain chain = 1;
    bytes client_bytes = 2;
    bytes signature_of_hash = 3;
}

message Ed25519CertificateChainSecret {
    CertificateChain public = 1;
    bytes account_secret = 2;
    bytes device_secret = 3;
}